methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:6: error: unclosed character literal
}'
 ^PictureMono2:1: error: ';' expected but 'def' found.
'override def run() {
          ^